--- a/DesafiosHTML/shopping_list.html
+++ b/DesafiosHTML/shopping_list.html
@@ -20,7 +20,7 @@
     <input type="checkbox" name="arroz" id="arroz">
     <label for="arroz">Arroz</label><br>
     <input type="checkbox" name="feijao" id="feijao">
-    <label for="feijao">Feijão de cordal</label><br>
+    <label for="feijao">Feijão de corda</label><br>
     
     
 </body>
